--- a/defaults.conf
+++ b/defaults.conf
@@ -5,3 +5,8 @@ CA_CERT_ST="California"
 CA_CERT_L="San Francisco"
 CA_CERT_O="Bogus Inc."
 CA_CERT_OU="Operations"
+
+# algorithm for rsa keys, see man:genrsa(1)
+KEY_ALG="aes256"
+KEY_LENGTH_ROOTCA=4096
+KEY_LENGTH_SIGNCA=4096
