--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ script:
       travis-client@bogus.com
       EOF
   - |
-      bash --posix ./bin/revoke-cert -c certs/travis-server.server.crt << EOF
+      bash --posix ./bin/revoke-cert -c certs/travis-server-bogus-com.server.crt << EOF
       1
       y
       signCA_password
