--- a/defaults.conf
+++ b/defaults.conf
@@ -7,7 +7,7 @@ CA_CERT_O="Bogus Inc."
 CA_CERT_OU="Operations"
 
 # algorithm for rsa keys, see man:genrsa(1)
-KEY_ALG="aes256"
-KEY_LENGTH_ROOTCA=4096
-KEY_LENGTH_SIGNCA=4096
-KEY_LENGTH_ENDCRT=2048
+CA_KEY_ALG="aes256"
+CA_KEY_LENGTH_ROOTCA=4096
+CA_KEY_LENGTH_SIGNCA=4096
+CA_KEY_LENGTH_ENDCRT=2048
