--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ script:
       bash --posix ./bin/create-server -s travis-server.bogus.com -a www.travis-server.bogus.com << EOF
       US
       California
-      San Francisco
-      Bogus Inc.
-      Jurisdiction of travis-server.bogus-com
+      "San Francisco"
+      "Bogus Inc."
+      "Jurisdiction of travis-server.bogus-com"
       travis-server.bogus.com
       signCA_password
       EOF
