Allow defaults for *all* interactive entries from environment variables

--- a/defaults.conf
+++ b/defaults.conf
@@ -13,3 +13,38 @@ CA_KEY_LENGTH_SIGNCA=4096
 CA_KEY_LENGTH_ENDCRT=3072
 
 CA_ENABLE_ENGINE=
+
+# Uncomment to answer these questions automatically
+# Anything with CA_ will be saved when creating a new defaults.cong
+#CA_SERVER_CERT_C="US"
+#CA_SERVER_CERT_ST="Washington"
+#CA_SERVER_CERT_L="Seattle"
+#CA_SERVER_CERT_OU="Bogus Sub Inc."
+#CA_CLIENT_CERT_L="Roaming"
+#CA_CLIENT_CERT_OU="Bogus Leader"
+#CA_CLIENT_CERT_MAIL="bogus@example.com"
+#CA_INIT_SLOT_SURE=
+#CA_REPLACE_SLOT_SURE=
+#CA_INIT_ENGINE_SURE=
+#CA_USE_PKCS11=N
+#CA_NAME_DEFAULT=
+#CA_DOMAIN_DEFAULT=example.com
+#CA_NAME_DEFAULT=example-com
+#CA_CERT_C_DEFAULT=US
+#CA_CERT_ST_DEFAULT="Texas"
+#CA_CERT_L_DEFAULT=Houston
+#CA_CERT_O_DEFAULT="Bogus Inc."
+#CA_CERT_OU_DEFAULT="Human Resources"
+#CA_SUB_CN_DEFAULT="Bogus Inc. Certificate example-com"
+
+# Password entry by env variable, should only be used for testing
+#CA_ROOT_PASS_DEFAULT=
+#CA_SUB_PASS_DEFAULT=
+#CA_SIGN_PASS_DEFAULT=
+
+# These won't propogate or save to a sub-CA default.conf,
+# but can be used to provide a default for a user,
+# press enter to use at a prompt
+#ROOT_PASS=testing
+#SUB_PASS=testing
+#SIGN_PASS=testing
