edit defaults and templates

--- a/defaults.conf
+++ b/defaults.conf
@@ -15,7 +15,7 @@ CA_KEY_LENGTH_ENDCRT=3072
 CA_ENABLE_ENGINE=
 
 # Uncomment to answer these questions automatically
-# Anything with CA_ will be saved when creating a new defaults.cong
+# Anything with CA_ will be saved when creating a new defaults.conf
 #CA_SERVER_CERT_C="US"
 #CA_SERVER_CERT_ST="Washington"
 #CA_SERVER_CERT_L="Seattle"
@@ -42,7 +42,7 @@ CA_ENABLE_ENGINE=
 #CA_SUB_PASS_DEFAULT=
 #CA_SIGN_PASS_DEFAULT=
 
-# These won't propogate or save to a sub-CA default.conf,
+# These won't propagate or save to a sub-CA default.conf,
 # but can be used to provide a default for a user,
 # press enter to use at a prompt
 #ROOT_PASS=testing
