optional root/signing privkey encryption

--- a/defaults.conf
+++ b/defaults.conf
@@ -6,8 +6,7 @@ CA_CERT_L="San Francisco"
 CA_CERT_O="Bogus Inc."
 CA_CERT_OU="Operations"
 
-# algorithm for rsa keys, see man:genrsa(1)
-CA_KEY_ALG="aes256"
+# RSA key length
 CA_KEY_LENGTH_ROOTCA=4096
 CA_KEY_LENGTH_SIGNCA=4096
 CA_KEY_LENGTH_ENDCRT=3072
